[tool.poetry]
name = "cg-validator-mash"
version = "0.1.0"
description = ""
authors = ["Maci Miri <maci@mashpe.net>"]
readme = "README.md"
packages = [{include = "cg_validator_mash", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
toml = "^0.10.2"
numpy = "^1.24.1"
scipy = "^1.10.0"
matplotlib = "^3.6.3"
auto-py-to-exe = "^2.33.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
